<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Arrival Time"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mEtAt"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Reminder Time"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mEtMt"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg"/>

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save Reminder"
        android:layout_marginTop="10dp"
        android:id="@+id/mBtnSave"/>

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:layout_marginTop="10dp"
        android:id="@+id/mBtnCancel"/>

</LinearLayout>