...
        android:id="@+id/mTvTotalTime"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@+id/mTvRouteTime"/>

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mTvAddReminder"
        android:layout_margin="15dp"
        android:text="Add Reminder"
        app:layout_constraintTop_toBottomOf="@+id/mTvTotalTime"/>

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
