<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/restaurantName"
        android:hint="Restaurant Name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="30dp"/>

    <EditText
        android:id="@+id/restaurantAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="Restaurant Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName"
        tools:layout_editor_absoluteY="105dp" />

    <EditText
        android:id="@+id/restaurantLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="Restaurant Longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantAddress"
        tools:layout_editor_absoluteY="105dp" />

    <EditText
        android:id="@+id/restaurantLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="Restaurant Latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantLong"
        tools:layout_editor_absoluteY="105dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addRestaurant"
        android:text="Add Restaurant"
        app:layout_constraintTop_toBottomOf="@+id/restaurantLat"
        android:layout_margin="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        android:text="Cancel"
        app:layout_constraintTop_toBottomOf="@+id/addRestaurant"
        android:layout_margin="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>