<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    android:backgroundTint="#9FFFFFFF"
    android:backgroundTintMode="src_over"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:alpha="0.7"
        android:id="@+id/imageView2"
        android:layout_width="221dp"
        android:layout_height="95dp"
        app:srcCompat="@drawable/welcome_banner" />

    <EditText
        android:id="@+id/mEtEmail1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint=" Email"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mEtPw1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="50dp"
        android:hint=" Password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mEtEmail" />

    <Button
        android:id="@+id/mBtnLogin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"

        android:text="Login"
        app:layout_constraintTop_toBottomOf="@+id/mEtPw" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mBtnRegister1"
        android:text="No Account? Go To Register"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="50dp"
        android:onClick="jumpIntent"
        app:layout_constraintTop_toBottomOf="@+id/mBtnLogin" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="intent" />


</LinearLayout>